# chatbotWithAlbert

./: .env.example  Makefile  README.md  app.py  pyproject.toml  streamlit_chat.py
RAG/: init_collection.py
fast/: main.py
